SERVER-21929 Make $in with null always match undefined